figure out how to do something, then search this file and you'll probably find
what you're looking for.

This file contains lots of developer notes as well as changes.

Key:

  * Addition/Improvement
  + Bug fix
  - Other
  . personal note
  (name) - the name of the person running HydraIRC who first reported
  the problem or requested the feature
  
23/September/2022 - AM (0.3.167) - Experimental
  gdwnldsKSC
  * Updated DEVELOPER.TXT with instructonis for building under Visual Studio 2008
  * Updated libXML2 from 2.4.24 to 2.5.1 and included updated build instructions to configure and build libXML2 in VS2008
  - Added notes in DEVELOPER.TXT on current locations to acquire necessary libraries and requirements to build.
  * Updated version number. 
  * Updated About Dialog box to reflect GPLv3 licensing from orignal author and current update efforts.

25/April/2008 - AM (0.3.166) - Experimental
  Medlir
  + Fixed DCC connect issue with some IP addresses, if you had a problem with DCC file transfers
    in HydraIRC please try again as this issue affected everyone that had an IP address that
    started with a number over 127.x.x.x


12/December/2008 - PM (0.3.165) - Released
  + Fixing remote DoS exploit in the parsing code for long irc:// urls when hydrairc's
    url handler is enabled.

25/July/2008 - PM (0.3.164) - Released
  * Added /listplugins - outputs plugin information to "Output" view.   
  + Made the winamp button appear on the toolbar again (broken in 0.3.162)
  * Stripping of winamp tag changed in order to be compatible with Media Monkey (finally!)
  * Re-worked the layout of the prefs window and it's treeview in preperation for some serious work
  * Changed the default format for the winamp plugin so it doesn't say winamp as no-one seems to use
    winamp these days anyway :D

25/July/2008 - PM (0.3.163) - Experimental
  * Added /omsg to alias plugin (same as /raw PRIVMSG @<channel> :<message>)

25/February/2008 - PM (0.3.162) - Experimental