@@ -4,13 +4,11 @@ HydraIRC Developer Notes
      IMPORTANT *** Read LICENSE.TXT first! *** IMPORTANT
 
 
-HydraIRC is written using Visual Studio .NET 2003.
-The code has been ported to Visual Studio .NET 2005 and support for Visual Studio .NET 2003
+HydraIRC is written using Visual Studio .NET 2008.
+The code has been ported to Visual Studio .NET 2008 and support for prior versions
 has been dropped.
 
-Visual Studio.NET 2005 including Service Pack 1 is REQUIRED to build HydraIRC.
-(due to changes in atlrx.h, failure to compile with SP1 will result access violations
-occuring in the regular expression matcher)
+Visual Studio.NET 2008 is REQUIRED to build HydraIRC.
 
 If you want to start helping out, check out the TODO.TXT and try and fix some bugs,
 then start with some of the simpler things until you're used to the codebase.
@@ -26,7 +24,7 @@ libxml2-master.zip
 WTL 9.1 - https://sourceforge.net/projects/wtl/files/WTL%209.1/WTL%209.1.5321%20Final/
 ATL Server includes/package - https://github.com/gabegundy/atlserver
 
-HydraIRC is written and developed using Visual Studio .NET 2003 and this is the
+HydraIRC is written and developed using Visual Studio .NET 2008 and this is the
 only supported build environment.  If you're using something else then you're on
 your own.
 
@@ -36,9 +34,7 @@ VISUAL STUDIO 2008 NOTES:
 
 The ATL Server package has become almost impossible to find as a regular download, but it can now be obtained at https://github.com/gabegundy/atlserver
 
-You will need this in addition to the below mentioned WTL 8.0 files (Add them to your global includes for ease of use) in order to compile on VS 2008 or newer. Add the WTL 9.1 and ATL Server include directories to global include paths. 
-
-Line #532 in Plugin_WinAMP/Plugin.cpp throws a C4067 warning in VS 2008 - "unexpected tokens following preprocessor directive - expected a newline" - this is due to the '.' included in the #ifdef - #ifdef HYDRAIRC_0.3.163 throws the warning, but #ifdef HYDRAIRC_03163 does not. This code could be safely removed, as we are not targeting on building the plugin with downlevel versions anymore. 
+You will need this in addition to the below mentioned WTL 9.1 files (Add them to your global includes for ease of use) in order to compile on VS 2008 or newer. Add the WTL 9.1 and ATL Server include directories to global include paths. 
 
 -----------------------------------
 
